~ organizing ~ fixed link to github ~ (hopefully) formatted roadmap lists

--- a/demo/index.html
+++ b/demo/index.html
@@ -25,7 +25,7 @@
 	</head>
 	<body>
 		<div id="content" style="width: 960px; height: 100%; margin: auto;">
-			<p>Welcome to the demo & documentation page for <a href="http://www.github.com/rockerest/slideEverything/master">slideEverything</a>.  I'm excited you're here!</p>
+			<p>Welcome to the demo & documentation page for <a href="http://www.github.com/rockerest/slideEverything">slideEverything</a>.  I'm excited you're here!</p>
 			<p>I don't want to waste your time, so let's get right into it!</p>
 			<hr />
 			<h2>The HTML</h2>
@@ -228,7 +228,7 @@
 		</div>
 		
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-		<script type="text/javascript" src="jquery.fn.slideEverything.js"></script>
+		<script type="text/javascript" src="../scripts/jquery.fn.slideEverything.js"></script>
 		<script type="text/javascript" src="index.js"></script>
 	</body>
 </html>
